tests/unit-fail-compilation/j016c.c.ref
j016c.c:7:7: error: Program requires the formation of a composite type from a variable length array type whose size is specified by an expression that is not evaluated (in an argument to sizeof).
  Undefined behavior (UB-TTE1).
   see C11 section 6.2.7:3 http://rvdoc.org/C11/6.2.7
   see C11 section J.2:1 item 16 http://rvdoc.org/C11/J.2
   see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j016c.c to see commands run.
